syntax = "proto3";

option go_package = "github.com/rbell/toolchest/server/example/proto";

package helloService;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}